# RGBDRecorder

./: .gitignore  CMakeLists.txt
interface/: images.qrc  list_plan.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  suivre.txt  text.qrc
recorder/: RealSense.cpp  RealSense.h  VideoSource.h
